[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.93"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dlv-list = "0.6.0"
enumflags2 = "0.7.10"
itertools = "0.13"
pathfinding = "4.11.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
winnow = "0.6"
